--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
     {
       "src": "index.js",
       "use": "@vercel/node"
+    },
+    {
+      "src": "public/**/*",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
@@ -12,16 +16,25 @@
       "dest": "/index.js"
     },
     {
+      "src": "/groups",
+      "dest": "/public/groups.html"
+    },
+    {
       "src": "/chat/(.*)",
       "dest": "/public/chat.html"
     },
     {
-      "src": "/groups",
-      "dest": "/public/groups.html"
+      "src": "/",
+      "dest": "/public/index.html"
     },
     {
       "src": "/(.*)",
       "dest": "/public/$1"
     }
-  ]
+  ],
+  "functions": {
+    "index.js": {
+      "maxDuration": 10
+    }
+  }
 }
